--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" style="background-color: #1C00ff00;">
 		<div class="container">
 			<a class="navbar-brand" href="#home">
-				<img src="https://w7.pngwing.com/pngs/22/573/png-transparent-micro-bacteria-logo-cutaneous-condition-skin-therapy-disease-pharmaceutical-drug-allergy-miscellaneous-hand-logo.png" style="width: 90px; height: 55px" alt="">
+				<img src="https://www.logolynx.com/images/logolynx/5b/5b4d5bfa862bd5e289bff6d835f2f1fc.jpeg" style="width: 90px; height: 55px" alt="">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -77,9 +77,9 @@
 						<div class="w3layouts-banner-info text-Center">
 							<h3 class="text-wh">Skin Disease Diagnosis</h3>
 							<head>
-							<h4 class="text-wh mx-auto my-4"><b>Acquire information about your skin problem.</b></h4>
+							<h4 class="text-wh mx-auto my-2"><b>Acquire information about your skin problem.</b></h4>
 							<br>
-							<h4 class="text-wh mx-auto my-4"><strong> Below are some queries we will address.</strong></h4>
+							<h4 class="text-wh mx-auto my-2"><strong> Below are some queries we will address.</strong></h4>
 							<p style="text-align: justify;" class="text-li mx-auto mt-2">
 								✓ Identify your specific skin disorder.<br>
 								✓ Examine your symptoms.<br>
@@ -106,11 +106,10 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="blog py">
-		<div class="container py-md-5" style="margin-top: 20px;"> <!-- Add margin-top to the container -->
-				        <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3><br>
-				        <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-5 pb-lg-0 pb-md-5">
+		<div class="container py-md-2" style="margin-top: 20px;"> <!-- Add margin-top to the container -->
+				        <h3 class="heading mb-sm-2 mb-2 text-center">Our Services</h3><br>
+				        <div class="col-lg-2 col-md-3 blog-center mb-lg-0 mb-sm-5 pb-lg-0 pb-md-2">
 				            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
 				            <a href="upload.html"> <!-- Link to the prediction page -->
 				                <div class="blog-info">
@@ -122,14 +121,14 @@
 				    </div>
 	</section>
 
-	<footer class="text-center py-5">
-		<div class="container py-md-3">
+	<footer class="text-center py-4">
+		<div class="container py-md-2">
 			<h2 class="logo2 text-center">
 				<a href="#home">
 					Skin Disease Diagnosis
 				</a>
 			</h2>
-			<div class="contact-left-footer mt-4"></div>
+			<div class="contact-left-footer mt-2"></div>
 			<div class="w3l-copy text-center">
 				<p class="text-da">An Intelligent System <br> </p>
 			</div>
