--- a/index.html
+++ b/index.html
@@ -106,20 +106,23 @@
 			</div>
 		</div>
 	</section>
-	<section class="blog py">
-		<div class="container py-md-5" style="margin-top: 20px;"> <!-- Add margin-top to the container -->
-				        <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3><br>
-				        <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-5 pb-lg-0 pb-md-5">
-				            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
-				            <a href="upload.html"> <!-- Link to the prediction page -->
-				                <div class="blog-info">
-				                    <h4>SKIN DISEASE DETECTION</h4>
-				                    <p class="mt-2">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
-				                </div>
-				            </a>
-				        </div>
-				    </div>
-	</section>
+	<section class="blog py-5">
+    <div class="container py-md-5" style="margin-top: 20px;">
+        <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-5 pb-lg-0 pb-md-5">
+                <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
+                <a href="upload.html">
+                    <div class="blog-info">
+                        <h4>SKIN DISEASE DETECTION</h4>
+                        <p class="mt-2">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 	<footer class="text-center py-4">
 		<div class="container py-md-2">
