--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 			</div>
 		</div>
 	</section>
-	<section class="blog py-5">
-    <div class="container py-md-2" style="margin-top: 20px;">
-        <h3 class="heading mb-sm-1 mb-1 text-center">Our Services</h3>
+<section class="blog py-5">
+    <div class="container py-md-5 text-center" style="margin-top: 20px;">
+        <h3 class="heading mb-sm-5 mb-4">Our Services</h3>
         <div class="row">
             <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-5 pb-lg-0 pb-md-5">
                 <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
@@ -122,6 +122,7 @@
         </div>
     </div>
 </section>
+
 
 
 	<footer class="text-center py-4">
