--- a/index.html
+++ b/index.html
@@ -49,10 +49,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             window.scrollTo(0, 1);
         }
 
-        // Function to change background images
-        var index = 0;
-        var images = [
-            'https://as2.ftcdn.net/v2/jpg/01/17/12/37/1000_F_117123796_MBKR6xeMfrBdfhSWNWtjTddwUci1F2HR.jpg',
+         <style>
+        html {
+            font-size: 1rem;
+        }
+
+        @media (min-width: 576px) {
+            html {
+                font-size: 1.25rem;
+            }
+        }
+
+        @media (min-width: 768px) {
+            html {
+                font-size: 1.5rem;
+            }
+        }
+
+        @media (min-width: 992px) {
+            html {
+                font-size: 1.75rem;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            html {
+                font-size: 2rem;
+            }
+        }
+
+        /* New CSS for background image */
+        .bg-image {
+            background-image: url('https://www.health.com/thmb/ZhCk9nTqW3YZA8Q3u3nVGR2dmEc=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Health-GettyImages-886098366-5a2b34568cc04e26ac9e1e72ce19c589.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+        }
+    </style>
             'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFwWdGQLpYRTF7EnMxh_P7CdH4VkIJnvg4NA1pdL6Ymg&s',
             'https://images.unsplash.com/opengraph/1x1.png?blend=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1523459178261-028135da2714%3Fblend%3D000000%26blend-alpha%3D10%26blend-mode%3Dnormal%26crop%3Dfaces%252Cedges%26h%3D630%26mark%3Dhttps%253A%252F%252Fimages.unsplash.com%252Fopengraph%252Fsearch-input.png%253Fh%253D84%2526txt%253Dskin%252Bdisease%2526txt-align%253Dmiddle%25252Cleft%2526txt-clip%253Dellipsis%2526txt-color%253D000000%2526txt-pad%253D80%2526txt-size%253D40%2526txt-width%253D660%2526w%253D750%2526auto%253Dformat%2526fit%253Dcrop%2526q%253D60%26mark-align%3Dmiddle%252Ccenter%26mark-w%3D750%26w%3D1200%26auto%3Dformat%26fit%3Dcrop%26q%3D60%26ixid%3DM3wxMjA3fDB8MXxzZWFyY2h8M3x8c2tpbiUyMGRpc2Vhc2V8ZW58MHx8fHwxNzA5NDQ2NjU3fDA%26ixlib%3Drb-4.0.3&blend-w=1&h=630&mark=https%3A%2F%2Fimages.unsplash.com%2Fopengraph%2Flogo.png&mark-align=top%2Cleft&mark-pad=50&mark-w=64&w=1200&auto=format&fit=crop&q=60' // Add more image URLs here
         ];
