--- a/index.html
+++ b/index.html
@@ -115,11 +115,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         class="banner_w3lspvt" id="home">
         <div class="csslider infinity" id="slider1">
 
-            <div class="banner-top">
-                <div class="overlay">
-                    <div class="container">
-                        <div class="w3layouts-banner-info text-Center">
-                            <h3 class="text-wh">Skin Disease Diagnosis</h3>
+                                        <div class="banner-top">
+                                <div class="overlay">
+                                    <div class="container">
+                                        <div class="w3layouts-banner-info text-Center">
+                                            <h3 class="text-wh" id="title"></h3>
+                                            <head></head>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <head>
                                 <h4 class="text-wh mx-auto my-4"><b>Acquire information about your skin problem.</b></h4>
                                 <br>
