--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         var index = 0;
         var images = [
             'https://as2.ftcdn.net/v2/jpg/01/17/12/37/1000_F_117123796_MBKR6xeMfrBdfhSWNWtjTddwUci1F2HR.jpg',
-            'https://img.freepik.com/free-photo/marble-compostion-with-colorful-style_23-2147927710.jpg?size=626&ext=jpg&ga=GA1.1.1395880969.1710115200&semt=ais',
-            'https://t3.ftcdn.net/jpg/02/16/47/22/360_F_216472247_cT66WDoS0fp1s3wC7eaykMJNDGVbOBPq.jpg' // Add more image URLs here
+            'https://www.shutterstock.com/image-illustration/nude-background-color-wallpaper-cream-260nw-2143511149.jpg',
+            'https://example.com/second-image.jpg' // Add more image URLs here
         ];
 
         function changeBackground() {
@@ -111,14 +111,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </nav>
 
     <!-- Banner -->
-    <section style="background-image: url('https://t3.ftcdn.net/jpg/02/16/47/22/360_F_216472247_cT66WDoS0fp1s3wC7eaykMJNDGVbOBPq.jpg'); background-position: center;"
+    <section style="background-image: url('https://as2.ftcdn.net/v2/jpg/01/17/12/37/1000_F_117123796_MBKR6xeMfrBdfhSWNWtjTddwUci1F2HR.jpg'); background-position: center;"
         class="banner_w3lspvt" id="home">
         <div class="csslider infinity" id="slider1">
 <div class="banner-top">
 								<div class="overlay">
 									<div class="container">
 										<div class="w3layouts-banner-info text-Center">
-											<h2 class="text-wh">Skin Disease Diagnosis</h2>
+											<h3 class="text-wh">Skin Disease Diagnosis</h3>
 											<head>
                                 <h4 class="text-wh mx-auto my-2"><b>Acquire information about your skin problem.</b></h4>
                                 <br>
