--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="overlay">
 									<div class="container">
 										<div class="w3layouts-banner-info text-Center">
-											<h3 class="text-wh">Skin Disease Diagnosis</h3>
+											<link rel="stylesheet" href="styles.css">
+    <h3 id="diagnosis" class="text-wh">Skin Disease Diagnosis</h3>
+    <script src="script.js"></script>
 											<head>
                                 <h4 class="text-wh mx-auto my-2"><b>Acquire information about your skin problem.</b></h4>
                                 <br>
