--- a/index.html
+++ b/index.html
@@ -163,20 +163,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     </style>
 				<!-- Products & Services -->
-				<section class="blog py-5">
-				    <div class="container py-md-5" style="margin-top: 20px;"> <!-- Add margin-top to the container -->
-				        <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3><br>
-				        <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-5 pb-lg-0 pb-md-5">
-				            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
-				            <a href="upload.html"> <!-- Link to the prediction page -->
-				                <div class="blog-info">
-				                    <h4>SKIN DISEASE DETECTION</h4>
-				                    <p class="mt-2">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
-				                </div>
+				<!-- First section -->
+<section class="...">
+    <!-- Content of the first section -->
+</section>
+
+<!-- Products & Services -->
+<section class="blog py-5">
+    <div class="container py-md-5" style="margin-top: 20px;"> <!-- Add margin-top to the container -->
+        <div class="row justify-content-center"> <!-- Center the content -->
+            <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-5 pb-lg-0 pb-md-5">
+                <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
+                <a href="upload.html"> <!-- Link to the prediction page -->
+                    <div class="blog-info">
+                        <h4>SKIN DISEASE DETECTION</h4>
+                        <p class="mt-2">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                    </div>
                 </a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+<!-- Any other sections or content following -->
+
     <!-- //Products & Services -->
 </body>
 
