--- a/index.html
+++ b/index.html
@@ -133,25 +133,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <!-- Core Values -->
     <section class="core-value py-5">
-        <div class="container py-md-4">
-            <h3 class="heading mb-sm-5 mb-4 text-center"> About Us</h3>
-            <div class="row core-grids">
-                <div class="col-lg-6 core-left">
-                    <img src=""
-                        alt="" />
-                </div>
-                <div class="col-lg-6 core-right">
-                    <h3 class="mt-4">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES TO ENHANCE PATIENT
-                        WELL-BEING AND TREATMENT OUTCOMES.
-                    </h3>
-                    <p class="mt-3">Utilizing state-of-the-art machine learning and deep learning technologies, we offer
-                        cutting-edge solutions to assist individuals, health care professionals, and researchers in predicting
-                        and addressing various skin conditions. Our mission is to empower users with accurate and timely
-                        predictions about their skin health, enabling early intervention and improved treatment effectiveness.</p>
-                </div>
+    <div class="container py-md-4">
+        <h3 class="heading mb-sm-5 mb-4 text-center"> About Us</h3>
+        <div class="row core-grids justify-content-center"> <!-- Center the content -->
+            <div class="col-lg-6 core-left">
+                <img src="path_to_your_image.jpg" alt="" /> <!-- Add the path to your image -->
+            </div>
+            <div class="col-lg-6 core-right">
+                <h3 class="mt-4">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES TO ENHANCE PATIENT
+                    WELL-BEING AND TREATMENT OUTCOMES.
+                </h3>
+                <p class="mt-3">Utilizing state-of-the-art machine learning and deep learning technologies, we offer
+                    cutting-edge solutions to assist individuals, health care professionals, and researchers in predicting
+                    and addressing various skin conditions. Our mission is to empower users with accurate and timely
+                    predictions about their skin health, enabling early intervention and improved treatment effectiveness.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
     <!-- //Core Values -->
 
     </style>
