--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Core Values -->
     <section class="core-value py-5">
     <div class="container py-md-4">
-        <h3 class="heading mb-sm-5 mb-4 text-center"> About Us</h3>
+        <h3 class="heading mb-sm-5 mb-4 text-right"> About Us</h3>
         <div class="row core-grids justify-content-center"> <!-- Center the content -->
-            <div class="col-lg-6 core-left">
+            <div class="col-lg-6 core-right">
                 <img src="path_to_your_image.jpg" alt="" /> <!-- Add the path to your image -->
             </div>
             <div class="col-lg-6 core-right">
