--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Core Values -->
     <section class="core-value py-5">
     <div class="container py-md-4">
-        <h3 class="heading mb-sm-5 mb-4 text-right"> About Us</h3>
+        <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
         <div class="row core-grids justify-content-center"> <!-- Center the content -->
-            <div class="col-lg-6 core-right">
+            <div class="col-lg-6 core-left">
                 <img src="path_to_your_image.jpg" alt="" /> <!-- Add the path to your image -->
             </div>
-            <div class="col-lg-6 core-right">
+            <div class="col-lg-6 core-left">
                 <h3 class="mt-4">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES TO ENHANCE PATIENT
                     WELL-BEING AND TREATMENT OUTCOMES.
                 </h3>
