--- a/index.html
+++ b/index.html
@@ -134,11 +134,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Core Values -->
     <section class="core-value py-5">
     <div class="container py-md-4">
-        <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
+        <h3 class="heading mb-sm-5 mb-4 text-center"> About Us</h3>
         <div class="row core-grids justify-content-center"> <!-- Center the content -->
-            <div class="col-lg-6 core-left">
-                <img src="path_to_your_image.jpg" alt="" /> <!-- Add the path to your image -->
-            </div>
             <div class="col-lg-6 core-left">
                 <h3 class="mt-4">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES TO ENHANCE PATIENT
                     WELL-BEING AND TREATMENT OUTCOMES.
@@ -148,9 +145,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     and addressing various skin conditions. Our mission is to empower users with accurate and timely
                     predictions about their skin health, enabling early intervention and improved treatment effectiveness.</p>
             </div>
+            <div class="col-lg-6 core-right">
+                <img src="path_to_your_image.jpg" alt="" /> <!-- Add the path to your image -->
+            </div>
         </div>
     </div>
 </section>
+
 
     <!-- //Core Values -->
 
