--- a/index.html
+++ b/index.html
@@ -131,54 +131,50 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
     <!-- //Banner -->
 
-    <!-- Core Values -->
-    <section class="core-value py-5">
-    <div class="container py-md-4">
-        <h3 class="heading mb-sm-5 mb-4 text-center"> About Us</h3>
-        <div class="row core-grids justify-content-center"> <!-- Center the content -->
-            <div class="col-lg-6 core-left">
-                <h3 class="mt-4">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES TO ENHANCE PATIENT
-                    WELL-BEING AND TREATMENT OUTCOMES.
-                </h3>
-                <p class="mt-3">Utilizing state-of-the-art machine learning and deep learning technologies, we offer
-                    cutting-edge solutions to assist individuals, health care professionals, and researchers in predicting
-                    and addressing various skin conditions. Our mission is to empower users with accurate and timely
-                    predictions about their skin health, enabling early intervention and improved treatment effectiveness.</p>
-            </div>
-            <div class="col-lg-6 core-right">
-                <img src="path_to_your_image.jpg" alt="" /> <!-- Add the path to your image -->
-            </div>
-        </div>
-    </div>
-</section>
-
-
-    <!-- //Core Values -->
-
-    </style>
-				<!-- Products & Services -->
-				<!-- First section -->
-<section class="...">
-    <!-- Content of the first section -->
-</section>
-
-<!-- Products & Services -->
-<section class="blog py-5">
-    <div class="container py-md-6" style="margin-top: 20px;"> <!-- Add margin-top to the container -->
-	     <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3><br>
-        <div class="row justify-content-center"> <!-- Center the content -->
-            <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
-                <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
-                <a href="upload.html"> <!-- Link to the prediction page -->
-                    <div class="blog-info">
-                        <h4>SKIN DISEASE DETECTION</h4>
-                        <p class="mt-2">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+    <div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+            <!-- Core Values -->
+            <section class="core-value py-5">
+                <div class="container py-md-4">
+                    <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
+                    <div class="row core-grids justify-content-left">
+                        <div class="col-lg-6 core-left">
+                            <h4 class="mt-4">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES TO ENHANCE PATIENT
+                                WELL-BEING AND TREATMENT OUTCOMES.</h4>
+                            <p class="mt-3">Utilizing state-of-the-art machine learning and deep learning technologies, we offer
+                                cutting-edge solutions to assist individuals, health care professionals, and researchers in predicting
+                                and addressing various skin conditions. Our mission is to empower users with accurate and timely
+                                predictions about their skin health, enabling early intervention and improved treatment effectiveness.</p>
+                        </div>
+                        <div class="col-lg-6 core-right">
+                            <img src="path_to_your_image.jpg" alt="" /> <!-- Add the path to your image -->
+                        </div>
                     </div>
-                </a>
-            </div>
+                </div>
+            </section>
+        </div>
+        <div class="col-lg-6">
+            <!-- Products & Services -->
+            <section class="blog py-5">
+                <div class="container py-md-6" style="margin-top: 20px;">
+                    <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
+                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
+                            <a href="upload.html">
+                                <div class="blog-info">
+                                    <h4>SKIN DISEASE DETECTION</h4>
+                                    <p class="mt-2">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
-</section>
+</div>
 
 <!-- Any other sections or content following -->
 
