--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                 </div>
             </div>
-    <<div class="container">
+    <div class="container">
     <div class="row">
         <div class="col-lg-6">
             <!-- Core Values -->
@@ -155,8 +155,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <!-- Products & Services -->
             <section class="blog py-5">
                 <div class="container py-md-6" style="margin-top: 20px;">
-                    <h3 class="heading mb-sm-6 mb-5 text-right">Our Services</h3>
-                    <div class="row justify-content-right">
+                    <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
+                    <div class="row justify-content-center">
                         <div class="col-lg-4 col-md-6 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
                             <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" />
                             <a href="upload.html">
