--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="w3layouts-banner-info text-Center">
                             <h3 class="text-wh">Skin Disease Diagnosis</h3>
                             <head>
-                                <h4 class="text-wh mx-auto my-4"><b>Acquire information about your skin problem.</b></h4>
+                                <h4 class="text-wh mx-auto my-2"><b>Acquire information about your skin problem.</b></h4>
                                 <br>
-                                <h4 class="text-wh mx-auto my-4"><strong> Below are some queries we will address.</strong></h4>
                                 <p style="text-align: justify;" class="text-li mx-auto mt-2">
                                     ✓ Identify your specific skin disorder.<br>
                                     ✓ Examine your symptoms.<br>
@@ -140,7 +139,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
-                            <h4 class="mt-4">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h4>
+                            <h3 class="mt-4" style="color: #000000;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
+
                             <p class="mt-3">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
                         </div>
                     </div>
@@ -153,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
                     <div class="row justify-content-center">
                         <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
-                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="400" height="300" style="margin-left: 20px;" />
+                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="500" height="400" style="margin-left: 40px;" />
 
                             <a href="upload.html">
                                 <div class="blog-info">
