--- a/index.html
+++ b/index.html
@@ -113,16 +113,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="overlay">
                     <div class="container">
                         <div class="w3layouts-banner-info text-Center">
-                            <h3 class="text-wh">Skin Disease Diagnosis</h3>
+                           <h3 class="text-wh" style="margin-right: 20px;">Skin Disease Diagnosis</h3>
+
                             <head>
-                                <h4 class="text-wh mx-auto my-2"><b>Acquire information about your skin problem.</b></h4>
+                                <h4 class="text-wh mx-auto my-2" style="margin-right: 20px;"><b>Acquire information about your skin problem.</b></h4>
+
                                 <br>
-                                <p style="text-align: justify;" class="text-li mx-auto mt-2">
+                                <p style="text-align: justify; margin-right: 20px;" class="text-li mx-auto mt-2">
                                     ✓ Identify your specific skin disorder.<br>
                                     ✓ Examine your symptoms.<br>
                                     ✓ Embrace remedies for your skin.<br>
-
                                 </p>
+
                         </div>
                     </div>
                 </div>
@@ -157,8 +159,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                             <a href="upload.html">
                                 <div class="blog-info">
-                                    <h4>SKIN DISEASE DETECTION</h4>
-                                    <p class="mt-2">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                                    <h4 style="margin-left: 10px;">SKIN DISEASE DETECTION</h4>
+<p class="mt-2" style="margin-left: 20px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+
                                 </div>
                             </a>
                         </div>
