--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="overlay">
                     <div class="container">
                         <div class="w3layouts-banner-info text-Center">
-                           <h3 class="text-wh" style="margin-top: -5px;">Skin Disease Diagnosis</h3>
-
-
+                           <h3 class="text-wh" style="margin-top: -10px;">Skin Disease Diagnosis</h3>
                             <head>
                                 <h4 class="text-wh mx-auto my-2" style="margin-right: 10px;"><b>Acquire information about your skin problem.</b></h4>
 
@@ -142,8 +140,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
-                           <h3 class="mt-4" style="color: #000000; margin-left: -5px; font-weight: bold;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
-<p class="mt-3" style="margin-left: -5px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+                           <h3 class="mt-4" style="color: #000000; margin-left: -10px;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
+
+<p class="mt-3" style="margin-left: -10px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+
 
                         </div>
                     </div>
@@ -160,8 +160,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                             <a href="upload.html">
                                 <div class="blog-info">
-                                    <h4 style="margin-left: 10px;">SKIN DISEASE DETECTION</h4>
-<p class="mt-2" style="margin-left: 10px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                                   <h4 style="margin-left: 20px;">SKIN DISEASE DETECTION</h4>
+<p class="mt-2" style="margin-left: 20px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
 
                                 </div>
                             </a>
