--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="About Us.html">About Us</a>
+                        <a class="nav-link" href="#About Us">About Us
+                            <span class=""sr-only"></span>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Our Services.html">Our Services</a>
+                        <a class="nav-link" href="#Our Services">Our Services
+                            <span class=""sr-only"></span>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -135,13 +139,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
     <div class="row">
         <div class="col-lg-6">
-            <section class="core-value py-5">
+            <section class="core-value py-5" id="About Us">
                 <div class="container py-md-4">
                     <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
                            <h3 class="mt-4" style="color: #000000; margin-left: -70px; font-weight: bold;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
-<p class="mt-3" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+                           <p class="mt-3" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
 
                         </div>
                     </div>
@@ -149,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </section>
         </div>
         <div class="col-lg-6">
-            <section class="blog py-5">
+            <section class="blog py-5" id="Our Services">
                 <div class="container py-md-6" style="margin-top: 20px;">
                     <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
                     <div class="row justify-content-center">
@@ -159,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <a href="upload.html">
                                 <div class="blog-info">
                                    <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
-<p class="mt-4" style="margin-left: 60px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                                   <p class="mt-4" style="margin-left: 60px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
 
                                 </div>
                             </a>
