--- a/index.html
+++ b/index.html
@@ -93,21 +93,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="banner-top">
                
                     <div class="container">
-                       <div class="w3layouts-banner-info text-Center" style="color: black; text-align: left;">
-    <h3 class="text-wh" style="margin-top: 0; color: black;">Skin Disease Diagnosis</h3>
+                      <div class="w3layouts-banner-info text-Top" style="color: black; text-align: left;">
+    <h3 class="text-wh" style="margin-top: -20px; color: black;">Skin Disease Diagnosis</h3>
 
     <head>
-       <h4 class="text-wh mx-auto my-2" style="margin-left: 0; color: black;"><b>Acquire information about your skin problem.</b></h4>
+       <h4 class="text-wh mx-auto my-2" style="margin-left: 0; margin-top: -20px; color: black;"><b>Acquire information about your skin problem.</b></h4>
 
         <br>
-        <p style="text-align: justify; margin-left: 0; color: black;" class="text-li mx-auto mt-2">
-    ✓ Identify your specific skin disorder.<br>
-    ✓ Examine your symptoms.<br>
-    ✓ Embrace remedies for your skin.<br>
-</p>
-
+        <p style="text-align: justify; margin-left: 0; margin-top: -20px; color: black;" class="text-li mx-auto mt-2">
+            ✓ Identify your specific skin disorder.<br>
+            ✓ Examine your symptoms.<br>
+            ✓ Embrace remedies for your skin.<br>
+        </p>
 </div>
-
 
                         </div>
                     </div>
