--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                
                     <div class="container">
                       <div class="w3layouts-banner-info text-Center">
-                           <h3 class="text-wh" style="margin-top: -50px;">Skin Disease Diagnosis</h3>
+                           <h3 class="text-wh" style="margin-top: -50px; color: black;">Skin Disease Diagnosis</h3>
                             
-                               <h4 class="text-wh mx-auto my-2" style="margin-right: 10px;"><b>Acquire information about your skin problem.</b></h4>
+                               <h4 class="text-wh mx-auto my-2" style="margin-right: 10px; color: black;"><b>Acquire information about your skin problem.</b></h4>
 
                                 <br>
-                                <p style="text-align: justify; margin-right: 10px;" class="text-li mx-auto mt-2">
+                                <p style="text-align: justify; margin-right: 10px; color: black;" class="text-li mx-auto mt-2">
                                     ✓ Identify your specific skin disorder.<br>
                                     ✓ Examine your symptoms.<br>
                                     ✓ Embrace remedies for your skin.<br>
