--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                       <div class="w3layouts-banner-info text-Center">
                           <h3 class="text-wh" style="margin-top: -100px; color: black;">Skin Disease Diagnosis</h3>
                             
-                               <h4 class="text-wh mx-auto my-2" style="margin-right: 10px; color: black;"><b>Acquire information about your skin problem.</b></h4>
+                               <h4 class="text-wh mx-auto my-2" style="margin-right: 0; margin-left: -50px; color: black;"><b>Acquire information about your skin problem.</b></h4>
 
-                                <br>
-                                <p style="text-align: justify; margin-right: 10px; color: black;" class="text-li mx-auto mt-2">
-                                    ✓ Identify your specific skin disorder.<br>
-                                    ✓ Examine your symptoms.<br>
-                                    ✓ Embrace remedies for your skin.<br>
-                                </p>
-
-</div>
+                            <br>
+                            <p style="text-align: justify; margin-right: 0; margin-left: -50px; color: black;" class="text-li mx-auto mt-2">
+                                ✓ Identify your specific skin disorder.<br>
+                                ✓ Examine your symptoms.<br>
+                                ✓ Embrace remedies for your skin.<br>
+                            </p>
+                            
+                            </div>
 
 
 
