--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                
                     <div class="container">
                       <div class="w3layouts-banner-info text-Center">
-                          <h3 class="text-wh" style="margin-top: -100px; color: white;">Skin Disease Diagnosis</h3>
+                          <h3 class="text-wh" style="margin-top: -100px; color: black;">Skin Disease Diagnosis</h3>
                             
-                               <h4 class="text-wh mx-auto my-2" style="margin-right: 0; margin-left: -50px; color: black;"><b>Acquire information about your skin problem.</b></h4>
+                               <h4 class="text-wh mx-auto my-4" style="margin-right: 0; margin-left: -100px; color: black;"><b>Acquire information about your skin problem.</b></h4>
 
                             <br>
-                            <p style="text-align: justify; margin-right: 0; margin-left: -50px; color: black;" class="text-li mx-auto mt-2">
+                            <p style="text-align: justify; margin-right: 0; margin-left: -100px; color: black;" class="text-li mx-auto mt-1">
                                 ✓ Identify your specific skin disorder.<br>
                                 ✓ Examine your symptoms.<br>
                                 ✓ Embrace remedies for your skin.<br>
@@ -139,12 +139,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
                     <div class="row justify-content-center">
                         <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
-                           <div class="drag-box">
-                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="400" height="300" style="float: left; margin-right: 20px;">    
+                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="200" height="200" style="margin-left: 80px;" />
+
                             <a href="upload.html">
-                                <div class="text-container">
-                                    <h4>SKIN DISEASE DETECTION</h4>
-                                    <p class="mt-4">Anticipate disease type, symptoms, and preventive measures for minimizing its impact.</p>
+                                <div class="blog-info">
+                                   <h4 style="margin-left: 80px;">SKIN DISEASE DETECTION</h4>
+                                   <p class="mt-4" style="margin-left: 80px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
 
                                 </div>
                             </a>
