--- a/index.html
+++ b/index.html
@@ -104,11 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 ✓ Examine your symptoms.<br>
                                 ✓ Embrace remedies for your skin.<br>
                             </p>
-                            
-                            </div>
-
-
-
+                          </div>
                         </div>
                     </div>
                 </div>
@@ -134,25 +130,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </section>
         </div>
         <div class="col-lg-6">
-            <section class="blog py-5" id="Our Services">
-                <div class="container py-md-6" style="margin-top: 20px;">
-                    <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
-                    <div class="row justify-content-center">
-                        <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
-                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="200" height="200" style="margin-left: 80px;" />
-
-                            <a href="upload.html">
-                                <div class="blog-info">
-                                   <h4 style="margin-left: 80px;">SKIN DISEASE DETECTION</h4>
-                                   <p class="mt-4" style="margin-left: 80px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
-
-                                </div>
-                            </a>
+    <section class="blog py-5" id="Our Services">
+        <div class="container py-md-6" style="margin-top: 20px;">
+            <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
+            <div class="row justify-content-center">
+                <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
+                    <div class="box-container" style="margin-left: 80px;">
+                        <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="200" height="200" />
+                        <a href="upload.html">
+                        <div class="blog-info">
+                            <h4>SKIN DISEASE DETECTION</h4>
+                            <p class="mt-4">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
+    </section>
+</div>
+
     </div>
 </div>
 
