--- a/index.html
+++ b/index.html
@@ -136,11 +136,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="row justify-content-center">
                 <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
                     <div class="box-container" style="margin-left: 80px;">
+                        <div class="box-container">
                         <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="200" height="200" />
                         <a href="upload.html">
                         <div class="blog-info">
                             <h4>SKIN DISEASE DETECTION</h4>
-                            <p class="mt-4">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                            <p class="mt-4">Anticipate disease type, symptoms, and preventive measures for minimizing its impact.</p>
+                        </div>
+                    </div>
+
                         </div>
                     </div>
                 </div>
