--- a/index.html
+++ b/index.html
@@ -129,30 +129,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
             </section>
         </div>
-        <div class="col-lg-6">
-    <section class="blog py-5" id="Our Services">
-        <div class="container py-md-6" style="margin-top: 20px;">
-            <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
-            <div class="row justify-content-center">
-                <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
-                    <div class="box-container" style="margin-left: 80px;">
-                       <div class="box-container">
-                        <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="200" height="200" />
-                        <div class="blog-info">
-                            <h4>SKIN DISEASE DETECTION</h4>
-                            <p class="mt-4">Anticipate disease type, symptoms, and preventive measures for minimizing its impact.</p>
-                        </div>
-                    </div>
+       <div class="col-lg-5">
+	<div class="row match-height">
+            <section class="blog py-3" id="Our Services">
+                <div class="container py-md-6" style="margin-top: 20px;">
+                    <h3 class="heading mb-sm-6 mb-5 text-center"> Our Services</h3>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
+                            <img src="Skin%20Disease%20Prediction_files/is-it-vitiligo.jpg" class="img-fluid" alt="" width="340" height="200" style="margin-left: 120px;">
 
-
-                        </div>
+                            <a href="https://mankunssanil.github.io/skin-disease-prediction2/upload.html">
+                               <div class="blog-info" style="margin-left: 130px; padding: 30px; border: 2px solid black; border-radius: 10px;">
+    <h4 style="line-height: 1.3;">SKIN DISEASE<br>DETECTION</h4>
+    <p class="mt-1">Anticipate disease type, symptoms, and preventive measures for minimizing its impact.</p>
+</div>                        
+                            </a>                          
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
-    </section>
-</div>
-
     </div>
 </div>
 
