--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3 class="heading mb-sm-6 mb-5 text-center"> Our Services</h3>
                     <div class="row justify-content-center">
                         <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
-                            <img src="Skin%20Disease%20Prediction_files/is-it-vitiligo.jpg" class="img-fluid" alt="" width="340" height="200" style="margin-left: 120px;">
+                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="400" height="300" style="margin-left: 60px;" />
 
-                            <a href="https://mankunssanil.github.io/skin-disease-prediction2/upload.html">
+                            <a href="upload.html">
                                <div class="blog-info" style="margin-left: 130px; padding: 30px; border: 2px solid black; border-radius: 10px;">
     <h4 style="line-height: 1.3;">SKIN DISEASE<br>DETECTION</h4>
     <p class="mt-1">Anticipate disease type, symptoms, and preventive measures for minimizing its impact.</p>
