--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Navbar Styling</title>
 <style>
-  .navbar-nav .nav-link {
-    background-color: white;
-    transition: background-color 0.3s ease;
-  }
+  
   .navbar-nav .nav-link:hover {
     background-color: #87CEEB; /* Sky blue color */
   }
@@ -146,7 +143,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
        <div class="col-lg-5">
 	<div class="row match-height">
-            <head>
+           <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draggable Box</title>
@@ -193,21 +190,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
     </head>
     <body>
-	    <div class="col-lg-6">
-            <section class="blog py-5">
-                <div class="container py-md-6" style="margin-top: 20px;">
-                    <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
-                    <div class="row justify-content-center">
-                        <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
     <div class="draggable-box">
-      <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="400" height="300" style="margin-left: 60px;" />
-
-	<a href="upload.html">
+      <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
       <div class="text">
-        <div class="blog-info">
-        <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
-       <p class="mt-4" style="margin-left: 60px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
-
+        <h4>Skin Disease Prediction</h4>
+        <p>Anticipate disease type, symptoms, and preventive measures for minimizing its impact.</p>
       </div>
     </div>
     </body>
