--- a/index.html
+++ b/index.html
@@ -55,46 +55,47 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" style="background-color: #1C00ff00;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark static-top" style="background-color: #1C00ff00; color: white;">
+
         <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Navbar Styling</title>
-<style>
-  
-  .navbar-nav .nav-link:hover {
-    background-color: #87CEEB; /* Sky blue color */
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Navbar Styling</title>
+  <style>
+    .navbar-nav .nav-link:hover {
+      background-color: #87CEEB; /* Sky blue color */
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-  <a class="navbar-brand" href="#home"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#home">Home
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#About Us">About Us
-          <span class="sr-only"></span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#Our Services">Our Services
-          <span class="sr-only"></span>
-        </a>
-      </li>
-    </ul>
+  <div class="container">
+    <a class="navbar-brand" href="#home"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#home" style="background-color: #87CEEB;">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#About Us" style="background-color: #87CEEB;">About Us
+            <span class="sr-only"></span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Our Services" style="background-color: #87CEEB;">Our Services
+            <span class="sr-only"></span>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
 </body>
+
     </nav>
 
     <!-- Banner -->
@@ -192,9 +193,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <body>
     <div class="draggable-box">
       <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
+	    <a href="upload.html">
       <div class="text">
-        <h4>Skin Disease Prediction</h4>
-        <p>Anticipate disease type, symptoms, and preventive measures for minimizing its impact.</p>
+        <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
+        <p class="mt-4" style="margin-left: 60px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
       </div>
     </div>
     </body>
