--- a/index.html
+++ b/index.html
@@ -79,22 +79,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <nav class="navbar navbar-expand-lg navbar-white bg-white">
     <div class="container">
-        <a class="navbar-brand" href="#home">Your Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#home">Home
+                    <a class="nav-link; color: sky blue;" href="#home">Home
                         <span class="sr-only">(current)</span>
                     </a><br>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#About Us">About Us</a><br>
+                    <a class="nav-link; color: sky blue;" href="#About Us">About Us</a><br>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Our Services">Our Services</a><br>
+                    <a class="nav-link; color: sky blue;" href="#Our Services">Our Services</a><br>
                 </li>
             </ul>
         </div>
@@ -196,40 +195,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       });
     </script>
 </head>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Move Content to Right</title>
-    <style>
-        /* Custom CSS to move content to the right */
-        .draggable-box {
-            display: flex;
-            flex-direction: row-reverse; /* Reverse the order of flex items */
-        }
-
-        .draggable-box img {
-            margin-left: 10px; /* Add margin to the left of the image */
-            margin-right: 60px; /* Adjust margin to position image */
-        }
-
-        .draggable-box .text {
-            flex-grow: 1; /* Allow text to grow and take up available space */
-        }
-
-        .draggable-box h4 {
-            text-align: right; /* Align heading text to the right */
-        }
-
-        .draggable-box p {
-            text-align: right; /* Align paragraph text to the right */
-        }
-    </style>
-</head>
 <body>
-    <div class="col-lg-6">
-        <section class="blog py-5" id="Our Services">
-            <div class="container py-md-6" style="margin-top: 20px;">
-                <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
+    <div class="col-lg-5">
+        <section class="blog py-4" id="Our Services">
+            <div class="container py-md-5" style="margin-top: 40px;">
+                <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
