--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         padding: 20px;
         margin: 20px auto;
         cursor: move;
+        position: fixed; /* Change position to fixed */
+        top: 20px; /* Adjust top position */
+        right: 20px; /* Adjust right position */
       }
       .draggable-box img {
         display: block;
