--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }
 
         .navbar-nav .nav-link {
-            color: #343a40; /* Set default link color to dark */
+            color: #343a40; /* Set default link color to white */
         }
 
         .navbar-nav .nav-item.active .nav-link {
             color: #fff; /* Set active link color to white */
-            background-color: #343a40; /* Set active link background color to dark */
+            background-color: #343a40; /* Set active link background color to white */
         }
     </style>
 </head>
@@ -220,8 +220,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
-        <section class="blog py-4" id="Our Services">
+    <div class="col-lg-5" style="margin-right: 5%;"> <!-- Added inline style for additional margin -->
+        <section class="blog py-4" id="Our Services" style="margin-right: 40px;"> <!-- Adjusted margin-right -->
             <div class="container py-md-5" style="margin-top: 40px;">
                 <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
                 <div class="draggable-box">
@@ -237,6 +237,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </section>
     </div>
 </body>
+
     <!-- //Products & Services -->
 
     
