--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: 5%;"> <!-- Added inline style for additional margin -->
-        <section class="blog py-4" id="Our Services" style="margin-right: 40px;"> <!-- Adjusted margin-right -->
+    <div class="col-lg-5" style="margin-right: 3%;"> <!-- Adjusted inline style to decrease margin-right -->
+        <section class="blog py-4" id="Our Services" style="margin-right: 37px;"> <!-- Adjusted margin-right -->
             <div class="container py-md-5" style="margin-top: 40px;">
-                <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
+                <h3 class="heading mb-sm-5 mb-4 text-center" style="border-bottom: 2px solid black; padding-bottom: 10px;">Our Services</h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
@@ -237,6 +237,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </section>
     </div>
 </body>
+
 
     <!-- //Products & Services -->
 
